Se crea una version preliminar de el desafio, se utilizan colores, dimensiones, tipografia indicada. Imagenes de perfiles y textos de chats son temporales, se agregara el detalle de cada uno en un proximo commit

--- a/index.html
+++ b/index.html
@@ -1,13 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/7ebea84995.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/styles/style.css">
     <title>Primer desafio CSS</title>
 </head>
+
 <body>
-    
+    <div class="container-chat-room">
+        <nav class="chat-list">
+            <ul class="container-boxs-chat">
+                <div class="actual-box-chat">
+                    <div class="actual-chat-img-container">
+                        <img class="img-avatar-resize" src="assets/images/avatar-test.jpg" alt="">
+                    </div>
+                    <div class="actual-detail-chat-container">
+                        <p class="actual-chat-name">Juanita</p>
+                        <p class="actual-chat-text-detail">Activa ahora</p>
+                    </div>
+                    <div class="options-container">
+                        <div class="icon-container-message">
+                            <i class="fa-regular fa-message fa-xl"></i>
+                        </div>
+                        <div class="icon-container-menu">
+                            <i class="fa-solid fa-bars fa-xl"></i>
+                        </div>
+
+
+                    </div>
+                </div>
+                <div class="new-chat">
+                    <button class="button-open-new-chat">Nuevo Chat</button>
+                </div>
+                <div class="box-chat">
+                    <div class="img-container">
+                        <img class="img-avatar" src="assets/images/avatar-test.jpg" alt="">
+                    </div>
+                    <div class="info-container">
+                        <p class="chat-name">Juanita</p>
+                        <p class="chat-text-detail">Lorem ipsum dolor sit.</p>
+                    </div>
+                </div>
+                <div class="box-chat">
+                    <div class="img-container">
+                        <img class="img-avatar" src="assets/images/avatar-test.jpg" alt="">
+                    </div>
+                    <div class="info-container">
+                        <p class="chat-name">Juanita</p>
+                        <p class="chat-text-detail">Lorem ipsum dolor sit.</p>
+                    </div>
+                </div>
+                <div class="box-chat">
+                    <div class="img-container">
+                        <img class="img-avatar" src="assets/images/avatar-test.jpg" alt="">
+                    </div>
+                    <div class="info-container">
+                        <p class="chat-name">Juanita</p>
+                        <p class="chat-text-detail">Lorem ipsum dolor sit.</p>
+                    </div>
+                </div>
+                <div class="box-chat">
+                    <div class="img-container">
+                        <img class="img-avatar" src="assets/images/avatar-test.jpg" alt="">
+                    </div>
+                    <div class="info-container">
+                        <p class="chat-name">Juanita</p>
+                        <p class="chat-text-detail">Lorem ipsum dolor sit.</p>
+                    </div>
+                </div>
+                <div class="box-chat">
+                    <div class="img-container">
+                        <img class="img-avatar" src="assets/images/avatar-test.jpg" alt="">
+                    </div>
+                    <div class="info-container">
+                        <p class="chat-name">Juanita</p>
+                        <p class="chat-text-detail">Lorem ipsum dolor sit.</p>
+                    </div>
+                </div>
+                <div class="box-chat">
+                    <div class="img-container">
+                        <img class="img-avatar" src="assets/images/avatar-test.jpg" alt="">
+                    </div>
+                    <div class="info-container">
+                        <p class="chat-name">Juanita</p>
+                        <p class="chat-text-detail">Lorem ipsum dolor sit.</p>
+                    </div>
+                </div>
+                <div class="box-chat">
+                    <div class="img-container">
+                        <img class="img-avatar" src="assets/images/avatar-test.jpg" alt="">
+                    </div>
+                    <div class="info-container">
+                        <p class="chat-name">Juanita</p>
+                        <p class="chat-text-detail">Lorem ipsum dolor sit.</p>
+                    </div>
+                </div>
+                <div class="box-chat">
+                    <div class="img-container">
+                        <img class="img-avatar" src="assets/images/avatar-test.jpg" alt="">
+                    </div>
+                    <div class="info-container">
+                        <p class="chat-name">Juanita</p>
+                        <p class="chat-text-detail">Lorem ipsum dolor sit.</p>
+                    </div>
+                </div>
+
+            </ul>
+        </nav>
+        <main class="chat-window">
+            <div class="hand-container">
+                <img class="img-hand" src="assets/images/hand.png" alt="">
+            </div>
+            <div class="text-container">
+                <p class="tittle">Comienza el Networking</p>
+                <p class="description">Presiona el botón <strong class="description-bold">"Nuevo chat"</strong>  para comenzar a crear nuevas
+                </p>
+                <p class="description">redes de contacto para tu empresa o emprendimiento. </p>
+            </div>
+        </main>
+    </div>
 </body>
+
 </html>
