Mejora de colores, animaciones, textos y distintas correcciones de errores

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -19,10 +19,10 @@
             <ul class="container-boxs-chat">
                 <div class="actual-box-chat">
                     <div class="actual-chat-img-container">
-                        <img class="img-avatar-resize" src="assets/images/avatar-test.jpg" alt="">
+                        <img class="img-avatar-resize" src="assets/images/maria.jpg" alt="">
                     </div>
                     <div class="actual-detail-chat-container">
-                        <p class="actual-chat-name">Juanita</p>
+                        <p class="actual-chat-name">María</p>
                         <p class="actual-chat-text-detail">Activa ahora</p>
                     </div>
                     <div class="options-container">
@@ -32,8 +32,6 @@
                         <div class="icon-container-menu">
                             <i class="fa-solid fa-bars fa-xl"></i>
                         </div>
-
-
                     </div>
                 </div>
                 <div class="new-chat">
@@ -41,74 +39,74 @@
                 </div>
                 <div class="box-chat">
                     <div class="img-container">
-                        <img class="img-avatar" src="assets/images/avatar-test.jpg" alt="">
+                        <img class="img-avatar" src="assets/images/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="">
                     </div>
                     <div class="info-container">
                         <p class="chat-name">Juanita</p>
-                        <p class="chat-text-detail">Lorem ipsum dolor sit.</p>
+                        <p class="chat-text-detail">At vero eos et accusa</p>
                     </div>
                 </div>
                 <div class="box-chat">
                     <div class="img-container">
-                        <img class="img-avatar" src="assets/images/avatar-test.jpg" alt="">
+                        <img class="img-avatar" src="assets/images/Screen Shot 2018-11-28 at 15.32.16.jpg" alt="">
                     </div>
                     <div class="info-container">
-                        <p class="chat-name">Juanita</p>
-                        <p class="chat-text-detail">Lorem ipsum dolor sit.</p>
+                        <p class="chat-name">Alberto</p>
+                        <p class="chat-text-detail">blanditiis praensentium</p>
                     </div>
                 </div>
                 <div class="box-chat">
                     <div class="img-container">
-                        <img class="img-avatar" src="assets/images/avatar-test.jpg" alt="">
+                        <img class="img-avatar" src="assets/images/Screen Shot 2018-11-28 at 15.30.34.jpg" alt="">
                     </div>
                     <div class="info-container">
-                        <p class="chat-name">Juanita</p>
-                        <p class="chat-text-detail">Lorem ipsum dolor sit.</p>
+                        <p class="chat-name">Ignacio</p>
+                        <p class="chat-text-detail">officiis debitis aut</p>
                     </div>
                 </div>
                 <div class="box-chat">
                     <div class="img-container">
-                        <img class="img-avatar" src="assets/images/avatar-test.jpg" alt="">
+                        <img class="img-avatar" src="assets/images/Screen Shot 2018-11-28 at 15.28.30.jpg" alt="">
                     </div>
                     <div class="info-container">
-                        <p class="chat-name">Juanita</p>
-                        <p class="chat-text-detail">Lorem ipsum dolor sit.</p>
+                        <p class="chat-name">Christian</p>
+                        <p class="chat-text-detail">Nam libero tempore</p>
                     </div>
                 </div>
                 <div class="box-chat">
                     <div class="img-container">
-                        <img class="img-avatar" src="assets/images/avatar-test.jpg" alt="">
+                        <img class="img-avatar" src="assets/images/Screen Shot 2018-11-28 at 15.32.44.jpg" alt="">
                     </div>
                     <div class="info-container">
-                        <p class="chat-name">Juanita</p>
-                        <p class="chat-text-detail">Lorem ipsum dolor sit.</p>
+                        <p class="chat-name">María José</p>
+                        <p class="chat-text-detail">impedit quo minus id</p>
                     </div>
                 </div>
                 <div class="box-chat">
                     <div class="img-container">
-                        <img class="img-avatar" src="assets/images/avatar-test.jpg" alt="">
+                        <img class="img-avatar" src="assets/images/Screen Shot 2018-11-28 at 15.31.09.jpg" alt="">
                     </div>
                     <div class="info-container">
-                        <p class="chat-name">Juanita</p>
-                        <p class="chat-text-detail">Lorem ipsum dolor sit.</p>
+                        <p class="chat-name">Gonzalo</p>
+                        <p class="chat-text-detail">At vero eos accusa</p>
                     </div>
                 </div>
                 <div class="box-chat">
                     <div class="img-container">
-                        <img class="img-avatar" src="assets/images/avatar-test.jpg" alt="">
+                        <img class="img-avatar" src="assets/images/Screen Shot 2018-11-28 at 15.30.54.jpg" alt="">
                     </div>
                     <div class="info-container">
-                        <p class="chat-name">Juanita</p>
-                        <p class="chat-text-detail">Lorem ipsum dolor sit.</p>
+                        <p class="chat-name">Juan Pablo</p>
+                        <p class="chat-text-detail">necessitatibus saepe</p>
                     </div>
                 </div>
                 <div class="box-chat">
                     <div class="img-container">
-                        <img class="img-avatar" src="assets/images/avatar-test.jpg" alt="">
+                        <img class="img-avatar" src="assets/images/Screen Shot 2018-11-28 at 15.28.04.jpg" alt="">
                     </div>
                     <div class="info-container">
-                        <p class="chat-name">Juanita</p>
-                        <p class="chat-text-detail">Lorem ipsum dolor sit.</p>
+                        <p class="chat-name">Magdalena</p>
+                        <p class="chat-text-detail">ut et voluptates</p>
                     </div>
                 </div>
 
