Se corrigen ciertos errores en titulo de proyecto

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7ebea84995.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/styles/style.css">
-    <title>Primer desafio CSS</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Chat App - Primer desafio CSS</title>
 </head>
 
 <body>
